--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "^18.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "mapbox-gl": "^2.10.0",
+    "mapbox-gl": "1.13.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
