--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-map-gl": "^7.0.19",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
